@@ -4,6 +4,7 @@ Fix search2 multiple choice stylings
 Update abc toggle
 Update overall search2 layout
 Update Print-friendly css
+Added pubprelink to savi.js for publisher ref links
 
 
 Development Portal (2017-08-18 shi)
